test/negative/struct_ref_field.mut
# ERROR: struct fields cannot be reference types
struct Bad
    name: str
    val: i64
end
